# bilibli_notes2

./: .gitattributes  README.md
51CTO-无人驾驶/: 光学雷达在无人驾驶技术中应用.ppt  基于ROS的无人驾驶系统.ppt  基于Spark与ROS的分布式无人驾驶模拟平台.ppt  基于计算机视觉的无人驾驶感知系统.ppt  无人驾驶的高精度地图.ppt
51CTO-无人驾驶/GPS及惯性传感器在无人驾驶的应用/: 2定位汇总.ppt
51CTO-无人驾驶/卷积神经网络在无人驾驶应用/: 4计算机视觉与深度学习1.ppt  FirstObjectDetection.py
51CTO-无人驾驶/强化学习在无人驾驶中的应用/: 5强化学习在无人驾驶.ppt  5论文.ppt  game.py  test1.py  强化学习.ppt
51CTO-无人驾驶/无人驾驶的规划与控制/: 无人驾驶的规划与控制.ppt
51CTO-无人驾驶/硬件平台与系统安全/: 无人驾驶硬件平台1.ppt
七月在线-无人驾驶/无人驾驶 思维导图/: 无人驾驶实践-七月在线.xmind
七月在线-无人驾驶/第一课 自动驾驶概述/: 第一课课件.docx
七月在线-无人驾驶/第七课 高精地图与车路协同设备/: HD Map.ipynb
七月在线-无人驾驶/第七课 高精地图与车路协同设备/第七课课件/Coding/JointMapping/: CMakeLists.txt
七月在线-无人驾驶/第二课 软件环境基础（ROS CMake）/: 3_ROS安装教程(Ubuntu16.04)(1).html  4_Docker配置ROS.html  5_ROS实战1.html  win10安装Ubuntu及ros可视化by 河北科技大学王玉杰.docx  自动驾驶ROS.txt
七月在线-无人驾驶/第五课-动态环境感知与3D检测算法/: .~detection-3d-0309-更新.pptx
七月在线-无人驾驶/第六课-动态环境感知与跟踪算法/: 动态环境感知与Tracking-更新.pptx
七月在线-无人驾驶/第十课 决策规划/: PlanningPreview.ipynb
七月在线-无人驾驶/第四课-动态环境感知与2D检测算法/: Tensorflow_CPP_编译与实现.txt  第四课课程知识点+实战代码的注意事项.html
七月在线-计算机视觉 从CV基础到深度学习实战/第一课/: 截至2012年-图像处理与计算机视觉基础总结.docx
唐宇迪-唐诗生成项目/: RNN与LSTM.pptx
唐宇迪-唐诗生成项目/poem/: .project
唐宇迪-机器学习算法配套案例/word2vec/: README.MD
唐宇迪-机器学习算法配套案例/神经网络/: RNN网络代码.py
唐宇迪/唐宇迪-StyleTransfer/: README.MD
唐宇迪/唐宇迪-Tensorflow课程/: README.MD  (+1 more)
数理统计-北航研究生课件/: 01数理统计绪论.ppt  02数理统计基本概念.ppt  03抽样调查.ppt  04描述性统计.ppt  05参数估计方法.ppt  06估计量的优良性准则.ppt  07估计量的优良性准则（续）.ppt  10假设检验.pptx  11假设检验2.pptx  12回归分析.pptx  13回归分析（续）(1).pptx  14多元正态分布.ppt
玩转算法与数据结构/: README.md
(+140 files in other folders)
